	* Made standard replies (such as supybot.replies.success, etc.)
	use the standard substitute (such as $nick, $who, $channel, etc.)
	in their text.
	
	* Fixed snarfers to respect lobotomies.
	
	* Fixed Admin.join not to add the channel to the supybot.channels
	registry entry if joining the channel wasn't successful.
	
2004-02-20  Jeremy Fincher  <jemfinch@supybot.org>

	* Version 0.77.0!

	* Changed the format of the user and channel databases to
	something much more readable and user-editable.  Be sure, if
	you're upgrading, to run tools/ircdbConvert.py on your user and
	channel databases *BEFORE* installing the new version.
	
	* Updated almost every document we have, and added a
	GETTING_STARTED document.  Yay!
	
	* Added several new options for Channel.kban: --exact, --nick,
	--user, --host, for more flexibility in determining what the
	banmask is.
	
	* Added a Scheduler plugin for scheduling events to occur at
	specific times.

	* Added a Herald plugin for announcing to the channel the arrival
	of certain users.
	
	* Changed the reply method of the irc object given to plugins not
	to require a msg object.
	
	* Added inter-factoid references for MoobotFactoids.  Simply
	define a factoid as "see <factoid-key>" (and nothing else) and it
	will automatically go pick up the value for that factoid and
	display it in its place.  Sort of a "symlink" for MoobotFactoids.
	
	* Added the ability to reply to factoids without the "whatis" in
	the Factoids plugin.  Now, you can use "@foo" instead of "@whatis
	foo".
	
	* Added --{from,to} and --sent options to Note.sent.

	* Changed Note.get to simply be "note".  Instead of "note get
	145", you should use "note 145".
	
	* Changed channel capabilities to use a comma to separate the
	channel from the capability instead of a period.  This is because
	channels can include periods (but not commas) and since we now
	allow "plugin.command" capabilities, there's no way to know